Fiks trøbbel med token
